🎨 ESLint: Remove checking of linebreak-style

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,8 @@
       "ImportDeclaration": "never",
       "ExportDeclaration": { "multiline": true, "minProperties": 3 }
     }],
-    "import/no-unresolved": "error"
+    "import/no-unresolved": "error",
+    "linebreak-style": "off"
   },
   "settings": {
     "import/parsers": {
