--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "ynhhoJ",
   "license": "MIT",
   "packageManager": "yarn@3.1.1",
+  "scripts": {
+    "search-book-by-name": "ts-node ./examples/searchBooksByName.ts"
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "node-html-parser": "^5.2.0"
