--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "packageManager": "yarn@3.1.1",
   "scripts": {
-    "search-book-by-name": "ts-node ./examples/searchBooksByName.ts"
+    "search-book-by-name": "ts-node ./examples/searchBooksByName.ts",
+    "search-authors": "ts-node ./examples/searchAuthors.ts",
+    "search-book-by-series": "ts-node ./examples/searchBooksBySeries.ts"
   },
   "dependencies": {
     "axios": "^0.24.0",
