--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "fast-xml-parser": "^4.0.3",
     "lodash": "^4.17.21",
     "node-html-parser": "^5.2.0"
   },
