--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.7",
   "author": "ynhhoJ",
   "license": "MIT",
-  "packageManager": "yarn@3.1.1",
+  "packageManager": "yarn@3.2.0-rc.15",
   "scripts": {
     "example-search-authors": "ts-node ./examples/searchAuthors.ts",
     "example-search-authors-paginated": "ts-node ./examples/searchAuthorsPaginated.ts",
@@ -33,7 +33,7 @@
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-sonarjs": "^0.11.0",
+    "eslint-plugin-sonarjs": "^0.12.0",
     "eslint-plugin-unicorn": "^41.0.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
