--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "example-search-book-by-series": "ts-node ./examples/searchBooksBySeries.ts",
     "example-search-book-by-series-paginated": "ts-node ./examples/searchBooksBySeriesPaginated.ts",
     "example-search-genres": "ts-node ./examples/searchGenres.ts",
-    "example-search-genres-paginated": "ts-node ./examples/searchGenresPaginated.ts"
+    "example-search-genres-paginated": "ts-node ./examples/searchGenresPaginated.ts",
+    "test": "npm run test:specific 'tests/**/*.ts'",
+    "test:specific": "npx nyc mocha --node-flags '--unhandled-rejections=strict' -r ts-node/register"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -23,10 +25,14 @@
     "node-html-parser": "^5.2.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/chai": "^4.3.0",
     "@types/lodash": "^4.14.178",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
+    "chai": "^4.3.6",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -35,6 +41,8 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-sonarjs": "^0.12.0",
     "eslint-plugin-unicorn": "^41.0.0",
+    "mocha": "^9.2.0",
+    "nyc": "^15.1.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "typescript-transform-paths": "^3.3.1"
