--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flibusta",
-  "version": "0.3.0-1",
+  "version": "0.3.1",
   "author": "ynhhoJ",
   "description": "Unofficial Flibusta API based on website search engine. If you like to read books - buy",
   "license": "MIT",
