--- a/tsconfig.production.json
+++ b/tsconfig.production.json
@@ -9,7 +9,10 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext",
+      "dom"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmit": false,
