--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "copy-types": "copyfiles -u 1 types/**/* build/types"
   },
   "dependencies": {
-    "axios": "^0.26.0",
+    "axios": "0.27.2",
     "fast-xml-parser": "^4.0.3",
     "lodash": "^4.17.21",
     "node-html-parser": "^5.2.0"
@@ -44,27 +44,27 @@
     "@types/chai": "^4.3.0",
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.20",
+    "@types/node": "18.0.0",
     "@types/webpack-node-externals": "^2.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "chai": "^4.3.6",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.9.0",
+    "eslint": "8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-sonarjs": "^0.12.0",
-    "eslint-plugin-unicorn": "^41.0.0",
-    "mocha": "^9.2.1",
+    "eslint-plugin-sonarjs": "0.13.0",
+    "eslint-plugin-unicorn": "42.0.0",
+    "mocha": "10.0.0",
     "nyc": "^15.1.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.5.5",
+    "typescript": "4.7.4",
     "typescript-transform-paths": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
