--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "axios": "0.27.2",
     "fast-xml-parser": "^4.0.3",
     "lodash": "^4.17.21",
-    "node-html-parser": "^5.2.0"
+    "node-html-parser": "^5.2.0",
+    "socks-proxy-agent": "^7.0.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
