--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "example-search-genres-paginated": "ts-node ./examples/searchGenresPaginated.ts",
     "test": "npm run test:specific 'tests/**/*.ts'",
     "test:specific": "npx nyc mocha --timeout 15000 --node-flags '--unhandled-rejections=strict' -r ts-node/register",
-    "build": "webpack && yarn copy-types",
+    "build": "webpack && npm run copy-types",
     "copy-types": "copyfiles -u 1 types/**/* build/types"
   },
   "dependencies": {
